rabbitmq-cluster/amqp-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: amqp-ingress
spec:
  entryPoints:
    - web
  routes:
  - match: HostSNI(`amqp.homelab.com`)
    services:
    - name: one
      port: 5672
      terminationDelay: 400
      proxyProtocol:
        version: 1
